--- a/web/style.css
+++ b/web/style.css
@@ -24,6 +24,7 @@ img {
 p {
     color: white;
     font-size: 1.5em;
+    background-color:rgba(999, 999, 999, 0.5);
 }
 button {
     margin: auto .5em;
