--- a/web/style.css
+++ b/web/style.css
@@ -22,7 +22,7 @@ img {
 	overflow-y: scroll;
 }
 p {
-    color: white;
+    color: black;
     font-size: 1.5em;
     background-color:rgba(999, 999, 999, 0.5);
 }
