--- a/web/style.css
+++ b/web/style.css
@@ -46,7 +46,7 @@ button {
 
 #nav-tabs {
     transform-origin: top left;
-    transform: rotate(90deg) translate(-.4em, -2.5em);
+    transform: rotate(90deg) translate(-70em, -68.7em);
     
 }
 #about {
