--- a/web/style.css
+++ b/web/style.css
@@ -1,10 +1,28 @@
 body {
 	overflow-y: hidden;
 	overflow-x: hidden;
-	background-color: #FDD9B5;
+	background-color: #C08040;
 }
 h1 {
-	color: white;
+	color: #FFC040;
+    text-align: center;
+    background-color:rgba(00, 00, 00, 0.7);
+    margin-left: 250px;
+    margin-right: 250px;
+}
+h2{
+   color: #FFC040;
+    text-align: center;
+    background-color:rgba(00, 00, 00, 0.7);
+    margin-left: 150px;
+    margin-right: 150px;
+}
+h3{
+   color: #FFC040;
+    text-align: center;
+    background-color:rgba(00, 00, 00, 0.7);
+    margin-left: 100px;
+    margin-right: 100px;
 }
 img {
 	height: 150vh;
@@ -23,14 +41,20 @@ img {
 }
 
 p {
-    color: black;
+    color: #FFC040;
     font-size: 1.5em;
-    background-color:rgba(999, 999, 999, 0.5);
+    background-color:rgba(00, 00, 00, 0.7);
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
 }
 ul {
-    color: black;
+    color: #FFC040;
     font-size: 1.5em;
-    background-color:rgba(999, 999, 999, 0.5);
+    background-color:rgba(00, 00, 00, 0.7);
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
 }
 button {
     margin: auto .5em;
@@ -42,6 +66,7 @@ button {
     display: flex;
     width: 125%;
     justify-content: center;
+    
 }
 
 #nav-tabs {
