--- a/web/style.css
+++ b/web/style.css
@@ -1,49 +1,50 @@
 body {
-	overflow-y: hidden;
-	overflow-x: hidden;
-	background-color: #C08040;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    background-color: #C08040;
 }
 h1 {
-	color: #FFC040;
+    color: #FFC040;
     text-align: center;
-    background-color:rgba(00, 00, 00, 0.7);
+    background-color: rgba(00, 00, 00, 0.7);
     margin-left: 250px;
     margin-right: 250px;
 }
-h2{
-   color: #FFC040;
+h2 {
+    color: #FFC040;
     text-align: center;
-    background-color:rgba(00, 00, 00, 0.7);
+    background-color: rgba(00, 00, 00, 0.7);
     margin-left: 150px;
     margin-right: 150px;
 }
-h3{
-   color: #FFC040;
+h3 {
+    color: #FFC040;
     text-align: center;
-    background-color:rgba(00, 00, 00, 0.7);
+    background-color: rgba(00, 00, 00, 0.7);
     margin-left: 100px;
     margin-right: 100px;
 }
 img {
-	height: 150vh;
-	object-fit: fill;
+    height: 150vh;
+    object-fit: fill;
+    position: fixed;
 }
 #content {
-	position: relative;
+    position: relative;
 }
-#pages{
-	position: absolute;
-	left: 1em;
-	top: 0;
-	z-index: 1;
-	height: 98vh;
-	overflow-y: scroll;
+#pages {
+    position: absolute;
+    left: 1em;
+    top: 0;
+    z-index: 1;
+    height: 98vh;
+    overflow-y: scroll;
 }
 
 p {
     color: #FFC040;
     font-size: 1.5em;
-    background-color:rgba(00, 00, 00, 0.7);
+    background-color: rgba(00, 00, 00, 0.7);
     margin-left: 20px;
     margin-right: 20px;
     text-align: center;
@@ -51,17 +52,46 @@ p {
 ul {
     color: #FFC040;
     font-size: 1.5em;
-    background-color:rgba(00, 00, 00, 0.7);
+    background-color: rgba(00, 00, 00, 0.7);
     margin-left: 20px;
     margin-right: 20px;
     text-align: center;
 }
-div{
-	position: absolute;
-	left: 1em;
-	top: 0;
-	z-index: 1;
-	height: 98vh;
-	overflow-y: scroll;
+div {
+    position: absolute;
+    left: 1em;
+    top: 0;
+    z-index: 1;
+    height: 98vh;
+    overflow-y: scroll;
 }
-
+.cover {
+    background: url("resize_front-cover-2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    white-space: pre-wrap;
+    position: absolute;
+}
+.open {
+    background: url("resize_open-book-2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    white-space: pre-wrap;
+    position: absolute;
+}
+.closed {
+    background: url("resize_back-cover-2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    white-space: pre-wrap;
+    position: absolute;
+}
+.menu{
+   float:right; 
+}
