added css for body id

--- a/web/style.css
+++ b/web/style.css
@@ -9,6 +9,17 @@ body {
     align-content: center;
 
 }
+body.analysis {
+    overflow-y: hidden;
+    overflow-x: hidden;
+    background-color: #F7F8F1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+
+}
 sidebar {
     display: flex;
     flex-direction: column;
