--- a/web/style.css
+++ b/web/style.css
@@ -32,6 +32,7 @@ h1 {
     color: white;
     text-align: center;
     background-color: black;
+    font-family: Verdana, humanist, sans-serif;
 
 }
 h2 {
@@ -40,7 +41,7 @@ h2 {
     background-color: black;
     margin-top: 2px;
     margin-bottom: 2px;
-
+    font-family: Verdana, humanist, sans-serif;
 
 }
 h3 {
@@ -49,7 +50,7 @@ h3 {
     background-color: black;
     margin-top: 2px;
     margin-bottom: 2px;
-
+    font-family: Verdana, humanist, sans-serif;
 
 }
 h3.sidebar-header {
@@ -59,7 +60,7 @@ h3.sidebar-header {
     margin-top: 2px;
     margin-bottom: 2px;
     width: 200px;
-
+    font-family: Verdana, humanist, sans-serif;
 }
 p {
     color: white;
@@ -68,6 +69,7 @@ p {
     margin-top: 4px;
     margin-bottom: 4px;
     line-height: 120%;
+    font-family: Verdana, humanist, sans-serif;
 
 
 }
@@ -75,13 +77,14 @@ ul {
     color: white;
     font-size: 1.3em;
     background-color: rgba(00, 00, 00, 1);
-
+    font-family: Verdana, humanist, sans-serif;
 
 
 
 }
 li {
     text-align: justify;
+    font-family: Verdana, humanist, sans-serif;
 
 
 
