Just changing the flex-direction back lol!

--- a/web/style.css
+++ b/web/style.css
@@ -3,7 +3,7 @@ body {
     overflow-x: hidden;
     background-color: #5a849f;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     align-content: center;
